--- a/index.html
+++ b/index.html
@@ -1,1 +1,203 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Giannos Paparistodemou</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+  <!-- Custom styles for this template -->
+  <link href="css/landing-page.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <!-- Navigation 
+  <nav class="navbar navbar-light bg-light static-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="btn btn-primary" href="#">Sign In</a>
+    </div>
+  </nav> -->
+
+  <!-- Masthead -->
+  <header class="text-center">
+    <section class="testimonials text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 mx-auto">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="img/self.jpg" alt="">
+              <h5>Giannos Paparistodemou</h5>
+            </div>           
+          </div>        
+        </div>
+        <p class="font-weight-light mb-0">Hello, i'm Giannos and i'm curently doing my MSc in Computer Games Engineering at Newcastle University.</p>
+      </div>
+    </section>
+
+    <p> 
+    <a href="https://github.com/yiannos55" target="_blank"> <i class="icon-social-github fa-lg"> </i> </a> 
+    <a href="https://www.youtube.com/channel/UCTzwqxfZN8J40BwDDWTo4xw" target="_blank"> <i class="icon-social-youtube fa-lg"> </i> </a> 
+    <a href="https://www.linkedin.com/in/yiannos-paparistodemou-4b3baa194/" target="_blank"> <i class="icon-social-linkedin fa-lg"> </i> </a> 
+    </p>
+    <p>QUICK LINKS TO YOUTUBE, LINKEDIN, GITHUB</p>
+  </header>
+<hr>
+  <!-- Icons Grid -->
+  <!-- <section class="features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+            </div>
+            <h3>Fully Responsive</h3>
+            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-layers m-auto text-primary"></i>
+            </div>
+            <h3>Bootstrap 4 Ready</h3>
+            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <h3>Easy to Use</h3>
+            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> -->
+
+  <!-- EDUCATION -->
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row">
+        <div class="col-lg-4 order-lg-1 ml-auto">
+          <p class="lead mb-0">  Education</p>
+        </div>
+        <div class="col-lg-6 order-lg-2">
+          <ul>
+            <li><p class="lead mb-0">Newcastle University </p></li>
+            <p class="lead mb-0">-MSc Computer Games Engineering,   September 2019 - Present</p>
+              <ul>
+                <li>Advanced Programming for Games</li>
+                <li>Advanced Graphics for Games</li>
+                <li>Advanced Game Technologies</li>
+              </ul>
+            <li><p class="lead mb-0">University of Reading  - SeptemberSeptember</p></li>
+            <p class="lead mb-0">-BSc Computer Science  2:1, September 2016 - September 2019</p>
+              <ul>
+                <li>Virtual Reality</li>
+                <li>Artificial Intelligence</li>
+                <li>Image Analysis</li>
+                <li>HCI</li>
+              </ul>
+          </ul>        
+        </div>
+      </div>
+    </div>
+    <hr>
+  </section>
+
+    <!-- PROJECTS -->
+    <section class="showcase">
+      <div class="container-fluid p-0">
+        <div class="row">
+          <div class="col-lg-4 order-lg-1 ml-auto">
+            <p class="lead mb-0">Projects</p>
+            <ul>
+              <li><p class="lead mb-0">Advanced Graphics Coursework </p></li> 
+              <P>this project was </P>
+            </ul>
+          </div>
+          <div class="col-lg-6 order-lg-2">
+             
+              <div class="text-center iframe-container">
+                <iframe width="576" height="336" src="https://www.youtube.com/embed/kYYkThFDk_4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+        
+          </div>
+        </div>
+      </div>
+        <hr>
+      </section>
+  <!-- </section> -->
+
+  <!-- Footer -->
+  <!-- <footer class="footer bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+          <ul class="list-inline mb-2">
+            <li class="list-inline-item">
+              <a href="#">About</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Contact</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Terms of Use</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Privacy Policy</a>
+            </li>
+          </ul>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
+        </div>
+        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer> -->
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
+</html>
