added about me section

--- a/index.html
+++ b/index.html
@@ -25,14 +25,6 @@
 
 <body>
 
-  <!-- Navigation 
-  <nav class="navbar navbar-light bg-light static-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
-      <a class="btn btn-primary" href="#">Sign In</a>
-    </div>
-  </nav> -->
-
   <!-- Masthead -->
   <header class="text-center">
     <section class="testimonials text-center">
@@ -46,15 +38,14 @@
           </div>        
         </div>
         <p class="font-weight-light mb-0">Hello, i'm Giannos and i'm curently doing my MSc in Computer Games Engineering at Newcastle University.</p>
+        <p class="font-weight-light mb-0">Here you can find information about me, my education and some of the projects i've worked on.</p>
       </div>
     </section>
-
-    <p> 
+    
     <a href="https://github.com/yiannos55" target="_blank"> <i class="icon-social-github fa-lg"> </i> </a> 
     <a href="https://www.youtube.com/channel/UCTzwqxfZN8J40BwDDWTo4xw" target="_blank"> <i class="icon-social-youtube fa-lg"> </i> </a> 
     <a href="https://www.linkedin.com/in/yiannos-paparistodemou-4b3baa194/" target="_blank"> <i class="icon-social-linkedin fa-lg"> </i> </a> 
-    </p>
-    <p>QUICK LINKS TO YOUTUBE, LINKEDIN, GITHUB</p>
+    
   </header>
 <hr>
   <!-- Icons Grid -->
@@ -91,6 +82,50 @@
       </div>
     </div>
   </section> -->
+
+
+<!--ABOUT ME-->
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row">
+        <div class="col-lg-4 order-lg-1 ml-auto">
+          <p class="lead mb-0"> About Me</p>
+          <p class="lead mb-0"> - As an individual  I was always amazed by what a computer can achieve</p>
+          <p class="lead mb-0"> - Excited to expand my knowledge</p>
+          <p class="lead mb-0"> - I enjoy creating and playing games</p>
+          <p class="lead mb-0"> - I enjoy creating and playing games</p>
+          <p class="lead mb-0"> - Born and raised Cyprus where i served the Military Police for 2 years</p>
+        </div>
+        <div class="col-lg-6 order-lg-2">
+        <ul>
+          <li><p class="lead mb-0">Programming Languages</p></li>
+             <ul>
+              <li>C++</li>
+              <li>C#</li>
+              <li>GLSL</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+            <li><p class="lead mb-0">Tools</p></li>
+             <ul>
+              <li>Microsoft Visual Studio</li>
+              <li>Unity</li>
+              <li>GitHub</li>
+              <li>Slack</li>
+              <li>Jira</li>
+              <li>Blender</li>
+            </ul>
+          <li><p class="lead mb-0">API's</p></li>
+          <ul>
+            <li>OpenGL</li>
+            <li>FMOD</li>
+          </ul>
+        </ul>  
+        </div>
+      </div>
+    </div>
+    <hr>
+  </section>
 
   <!-- EDUCATION -->
   <section class="showcase">
