Descripition of Graphics Project

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
           <p class="lead mb-0"> - As an individual  I was always amazed by what a computer can achieve</p>
           <p class="lead mb-0"> - Excited to expand my knowledge</p>
           <p class="lead mb-0"> - I enjoy creating and playing games</p>
-          <p class="lead mb-0"> - I enjoy creating and playing games</p>
           <p class="lead mb-0"> - Born and raised Cyprus where i served the Military Police for 2 years</p>
         </div>
         <div class="col-lg-6 order-lg-2">
@@ -166,7 +165,20 @@
             <p class="lead mb-0">Projects</p>
             <ul>
               <li><p class="lead mb-0">Advanced Graphics Coursework </p></li> 
-              <P>this project was </P>
+                <ul>
+                  <li>OpenGL</li>
+                  <li>GLSL</li>
+                  <li>C++</li>
+                </ul>
+                <li><p class="lead mb-0">This project was created for the Advanced Graphics Coursework in my postgraduate course, and the video demonstrates the following:</p></li>
+                <ul>
+                  <li>Landscape with multiple texture blending in fragment shader</li>
+                  <li>Lighting Clculations for ambient, diffuse and specular components</li>
+                  <li>Post processing effects Blur, Split screen, Sobel's Edge filtering</li>
+                  <li>Real time shadows</li>
+                  <li>Reflections</li>
+                  <li>Automated camera movement</li>
+                </ul>
             </ul>
           </div>
           <div class="col-lg-6 order-lg-2">
@@ -180,54 +192,6 @@
       </div>
         <hr>
       </section>
-  <!-- </section> -->
-
-  <!-- Footer -->
-  <!-- <footer class="footer bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-          </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
