added anatomy section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
   </section>
 
     <!-- PROJECTS -->
+    <!--GRAPHICS-->
     <section class="showcase">
       <div class="container-fluid p-0">
         <div class="row">
@@ -181,18 +182,44 @@
                 </ul>
             </ul>
           </div>
-          <div class="col-lg-6 order-lg-2">
-             
+          <div class="col-lg-6 order-lg-2">            
               <div class="text-center iframe-container">
                 <iframe width="576" height="336" src="https://www.youtube.com/embed/kYYkThFDk_4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
-        
           </div>
         </div>
       </div>
         <hr>
       </section>
 
+    <!--ANATOMY-LEARN-->
+      <section class="showcase">
+        <div class="container-fluid p-0">
+          <div class="row">
+            <div class="col-lg-4 order-lg-1 ml-auto">
+              <ul>
+                <li><p class="lead mb-0">Anatomy Learning with VR games</p></li> 
+                  <ul>
+                    <li>Unity</li>
+                    <li>C#</li>
+                  </ul>
+                  <li><p class="lead mb-0">This small project was created to showcase how education could benefit from VR games. Replacing the old school methods with up to date tools and technology could attract more users.</p></li>
+                    <ul>
+                      <li>Simple animations created in Unity</li>
+                      <li>GUI</li>
+                      <li>Small C# scripts</li>
+                    </ul>
+                </ul>
+            </div>
+            <div class="col-lg-6 order-lg-2">            
+                <div class="text-center iframe-container">
+                  <iframe width="576" height="336" src="https://www.youtube.com/embed/od73zvm7dog" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+          </div>
+        </div>
+          <hr>
+        </section>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
