--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <p class="lead mb-0"> - As an individual  I was always amazed by what a computer can achieve</p>
           <p class="lead mb-0"> - Excited to expand my knowledge</p>
           <p class="lead mb-0"> - I enjoy creating and playing games</p>
-          <p class="lead mb-0"> - Born and raised Cyprus where i served the Military Police for 2 years</p>
+          <p class="lead mb-0"> - Born and raised in Cyprus where i served the Military Police for 2 years</p>
         </div>
         <div class="col-lg-6 order-lg-2">
         <ul>
