--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <li>Advanced Graphics for Games</li>
                 <li>Advanced Game Technologies</li>
               </ul>
-            <li><p class="lead mb-0">University of Reading  - SeptemberSeptember</p></li>
+            <li><p class="lead mb-0">University of Reading</p></li>
             <p class="lead mb-0">-BSc Computer Science  2:1, September 2016 - September 2019</p>
               <ul>
                 <li>Virtual Reality</li>
@@ -171,10 +171,10 @@
                   <li>GLSL</li>
                   <li>C++</li>
                 </ul>
-                <li><p class="lead mb-0">This project was created for the Advanced Graphics Coursework in my postgraduate course, and the video demonstrates the following:</p></li>
+                <p class="lead mb-0">- This project was created for the Advanced Graphics Coursework in my postgraduate course, and the video demonstrates the following:</p>
                 <ul>
                   <li>Landscape with multiple texture blending in fragment shader</li>
-                  <li>Lighting Clculations for ambient, diffuse and specular components</li>
+                  <li>Lighting Calculations for ambient, diffuse and specular components</li>
                   <li>Post processing effects Blur, Split screen, Sobel's Edge filtering</li>
                   <li>Real time shadows</li>
                   <li>Reflections</li>
@@ -189,7 +189,7 @@
           </div>
         </div>
       </div>
-        <hr>
+  
       </section>
 
     <!--ANATOMY-LEARN-->
@@ -203,7 +203,7 @@
                     <li>Unity</li>
                     <li>C#</li>
                   </ul>
-                  <li><p class="lead mb-0">This small project was created to showcase how education could benefit from VR games. Replacing the old school methods with up to date tools and technology could attract more users.</p></li>
+                  <p class="lead mb-0">- This small project was created to showcase how education could benefit from VR games. Replacing the old school methods with up to date tools and technology could attract more users.</p>
                     <ul>
                       <li>Simple animations created in Unity</li>
                       <li>GUI</li>
