--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row">
           <div class="col-lg-4 mx-auto">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/self.jpg" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="img/gp1.jpg" alt="">
               <h5>Giannos Paparistodemou</h5>
             </div>           
           </div>        
