--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>           
           </div>        
         </div>
-        <p class="font-weight-light mb-0">Hello, i'm Giannos and i'm curently doing my MSc in Computer Games Engineering at Newcastle University.</p>
+        <p class="font-weight-light mb-0">Hello, i'm Giannos a recent Computer Science graduate with an MSc in Computer Games Engineering.</p>
         <p class="font-weight-light mb-0">Here you can find information about me, my education and some of the projects i've worked on.</p>
       </div>
     </section>
@@ -116,7 +116,6 @@
           <li><p class="lead mb-0">API's</p></li>
           <ul>
             <li>OpenGL</li>
-            <li>FMOD</li>
           </ul>
         </ul>  
         </div>
