added msc grade

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row">
         <div class="col-lg-4 order-lg-1 ml-auto">
           <p class="lead mb-0"> About Me</p>
-          <p class="lead mb-0"> - As an individual  I was always amazed by what a computer can achieve</p>
+          <p class="lead mb-0"> - As an individual  I am always amazed by what a computer can achieve</p>
           <p class="lead mb-0"> - Excited to expand my knowledge</p>
           <p class="lead mb-0"> - I enjoy creating and playing games</p>
           <p class="lead mb-0"> - Born and raised in Cyprus where i served the Military Police for 2 years</p>
@@ -134,7 +134,7 @@
         <div class="col-lg-6 order-lg-2">
           <ul>
             <li><p class="lead mb-0">Newcastle University </p></li>
-            <p class="lead mb-0">-MSc Computer Games Engineering,   September 2019 - Present</p>
+            <p class="lead mb-0">-MSc Computer Games Engineering Distinction, September 2019 - September 2020</p>
               <ul>
                 <li>Advanced Programming for Games</li>
                 <li>Advanced Graphics for Games</li>
