added final project

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
   </section>
 
     <!-- PROJECTS -->
+        
     <!--GRAPHICS-->
     <section class="showcase">
       <div class="container-fluid p-0">
@@ -188,7 +189,38 @@
         </div>
       </div>
     </section>
+    <hr>
 
+<!--VR-GV -->
+<section class="showcase">
+  <div class="container-fluid p-0">
+    <div class="row">
+      <div class="col-lg-4 order-lg-1 ml-auto">
+        <ul>
+          <li><p class="lead mb-0">Virtual Reality-Graph Visualiser (VR-GV)</p></li> 
+            <ul>
+              <li>Unity</li>
+              <li>C#</li>
+              <li>Graph Drawing algorithms</li>
+            </ul>
+            <p class="lead mb-0">- Final project for my Msc. The primary focus of VR-GV was to introduce an innovative approach for graph visualisations in a Virtual World, 
+              to help scientists discover patterns and relationships between genes, proteins, and diseases.</p>
+              <ul>
+                <li>Developed an XML parser to read and load the initial graph from an xml document inside Unity's environment</li>
+                <li>Use of Python and networkX library to produce small demo data</li>
+                <li>VR-GV features multiple graph drawing algorithms including a forced-based approach, a sorted clustered drawing and a circular one</li>
+              </ul>
+          </ul>
+      </div>
+      <div class="col-lg-6 order-lg-2">            
+          <div class="text-center iframe-container">
+            <iframe width="576" height="336" src="https://youtube.com/embed/raXgNiRLqxM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+      </div>
+    </div>
+  </div>
+    <hr>
+  </section>
     <!--ANATOMY-LEARN-->
       <section class="showcase">
         <div class="container-fluid p-0">
