--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
     <a href="https://github.com/yiannos55" target="_blank"> <i class="icon-social-github fa-lg"> </i> </a> 
     <a href="https://www.youtube.com/channel/UCTzwqxfZN8J40BwDDWTo4xw" target="_blank"> <i class="icon-social-youtube fa-lg"> </i> </a> 
-    <a href="https://www.linkedin.com/in/yiannos55/" target="_blank"> <i class="icon-social-linkedin fa-lg"> </i> </a> 
+    <a href="https://www.linkedin.com/in/yiannos55" target="_blank"> <i class="icon-social-linkedin fa-lg"> </i> </a> 
     
   </header>
 <hr>
