updated linkedin  link

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           </div>        
         </div>
         <p class="font-weight-light mb-0">Hello, i'm Giannos a recent Computer Science graduate with an MSc in Computer Games Engineering.</p>
-        <p class="font-weight-light mb-0">Here you can find information about me, my education and some of the projects i've worked on.</p>
+        <p class="font-weight-light mb-0">Here you can find information about me, my education and some of the projects I've worked on.</p>
       </div>
     </section>
     
     <a href="https://github.com/yiannos55" target="_blank"> <i class="icon-social-github fa-lg"> </i> </a> 
     <a href="https://www.youtube.com/channel/UCTzwqxfZN8J40BwDDWTo4xw" target="_blank"> <i class="icon-social-youtube fa-lg"> </i> </a> 
-    <a href="https://cy.linkedin.com/in/yiannos55" target="_blank"> <i class="icon-social-linkedin fa-lg"> </i> </a> 
+    <a href="https://www.linkedin.com/in/yiannos55/" target="_blank"> <i class="icon-social-linkedin fa-lg"> </i> </a> 
     
   </header>
 <hr>
@@ -93,7 +93,7 @@
           <p class="lead mb-0"> - As an individual  I am always amazed by what a computer can achieve</p>
           <p class="lead mb-0"> - Excited to expand my knowledge</p>
           <p class="lead mb-0"> - I enjoy creating and playing games</p>
-          <p class="lead mb-0"> - Born and raised in Cyprus where i served the Military Police for 2 years</p>
+          <p class="lead mb-0"> - Born and raised in Cyprus where I served the Military Police for 2 years</p>
         </div>
         <div class="col-lg-6 order-lg-2">
         <ul>
